--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,16 +14,18 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:id="@+id/edtEmail"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="Email" />
+        android:text="Email"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="191dp" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/edtSenha"
         android:layout_below="@+id/edtEmail"
         android:layout_centerHorizontal="true"
         android:password="false"
@@ -33,8 +35,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Entrar"
-        android:id="@+id/button"
-        android:layout_below="@+id/editText"
+        android:id="@+id/btnEntrar"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/txtCadastrar"
+        android:layout_alignStart="@+id/txtCadastrar"
+        android:layout_marginBottom="69dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Cadastrar"
+        android:id="@+id/txtCadastrar"
+        android:textColor="#ffffff"
+        android:layout_above="@+id/btnEntrar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="44dp" />
+        android:layout_marginBottom="56dp" />
+
 </RelativeLayout>
