--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
         <color name="colorPrimaryDark">#689f38</color>
-        <color name="colorPrimaryDarker">#33691E</color>
+        <color name="colorPrimaryDarker">#33691e</color>
         <color name="colorPrimary">#8bc34a</color>
         <color name="textColorPrimary">#FFFFFF</color>
-        <color name="colorAccent">#ffff00</color>
+        <color name="colorAccent">#ffc107</color>
 
         <!-- Cores customizadas -->
         <color name="cinza">#CCCCCC</color>
@@ -12,5 +12,6 @@
     <color name="black_overlay">#66000000</color>
         <color name="primary_text_material_dark">#ffffff</color>
         <color name="secondary_text_material_dark">#b2ffffff</color>
+    <color name="primary_material_dark_1">#4caf50</color>
 
 </resources>
