--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="background_material_dark">#303030</color>
     <color name="foreground_material_dark">#424242</color>
+    <color name="primary_material_dark">#4caf50</color>
 </resources>
